<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_open_bottom_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_bottom_sheet" />

        <Button
            android:id="@+id/btn_open_bottom_sheet_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_bottom_sheet_dialog" />

        <Button
            android:id="@+id/btn_open_right_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_right_sheet" />

        <Button
            android:id="@+id/btn_open_right_sheet_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_right_sheet_dialog" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/right_sheet"
        android:layout_width="400dp"
        android:layout_height="match_parent"
        android:background="#FF0000"
        app:behavior_peekHeight="50dp"
        app:layout_behavior="@string/right_sheet_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/right_sheet_content"
            android:textAppearance="?android:textAppearanceMedium" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#00FF00"
        app:behavior_peekHeight="50dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bottom_sheet_content"
            android:textAppearance="?android:textAppearanceMedium" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>